Bug 485456 - With Qt 6.7, System Tray popup is inappropriately resized to a tiny nub
Summary: With Qt 6.7, System Tray popup is inappropriately resized to a tiny nub
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 6.0.4
Platform: openSUSE Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 485461 485587 485612 485708 485780 485874 485958 485983 486042 486260 486380 486476 486477 486485 486607 486767 486801 486981 486989 487091 487232 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-12 20:38 UTC by Astrid Hill-Lowe
Modified: 2024-09-17 15:52 UTC (History)
29 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.5
Sentry Crash Report:


Attachments
Screen shot of System tray not showing the pop up (6.18 KB, image/png)
2024-04-12 20:38 UTC, Astrid Hill-Lowe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Astrid Hill-Lowe 2024-04-12 20:38:26 UTC
Created attachment 168433 [details]
Screen shot of System tray not showing the pop up

SUMMARY
System Tray popup system does not actually show 

STEPS TO REPRODUCE
1. Click any icon in System Tray
2. Tray appears to start to pop up
3. Nothing happens

OBSERVED RESULT
No system tray popup appears when clicking on an icon in the system tray

EXPECTED RESULT
System tray pop ups should function normally

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
(available in About System)
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Will attach screenshot
Comment 1 Nate Graham 2024-04-13 14:10:34 UTC
Maybe a Qt 6.7 regression? Cannot reproduce with Qt 6.6.2.

Does this reproduce in a new clean user account?
Comment 2 Nate Graham 2024-04-13 14:13:55 UTC
*** Bug 485461 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2024-04-13 14:14:18 UTC
Does it start working if you make the panel floating?
Comment 4 Astrid Hill-Lowe 2024-04-20 02:15:53 UTC
(In reply to Nate Graham from comment #3)
> Does it start working if you make the panel floating?

It happens on both floating and non-floating panels. It also persists upon re-installation of openSUSE tumbleweed with KDE 6.0.4.
Comment 5 Nate Graham 2024-04-21 03:34:18 UTC
Thanks. Pretty sure this is a Qt 6.7 regression of some kind. :/
Comment 6 Nate Graham 2024-04-21 04:08:57 UTC
As a workaround, try resizing the tiny gray semicircle that appeared above the icon you clicked.
Comment 7 Maël Guérin 2024-04-21 07:44:31 UTC
Same issue here on Arch Linux, with KDE Plasma 6.0.4, KDE Frameworks 6.1.0 and most of all, QT 6.7.0.
Comment 8 Chad Sheridan 2024-04-21 14:16:10 UTC
(In reply to Nate Graham from comment #5)
> Thanks. Pretty sure this is a Qt 6.7 regression of some kind. :/

Going to test with a rollback of QT on an arch VM to test.
Comment 9 Mustafa 2024-04-23 11:35:27 UTC
So I was messing around earlier with my (OpenSuse Tumbleweed) system and I removed some packages that I did not need, those being PackageKit and Discover and then rebooted my system. System tray icons now are working with no issues. I rebooted my system again just to make sure, and they're still working. Not sure if this actually has anything to do with this bug, but I figured I should at least mention it.

KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Comment 10 Martin 2024-04-23 13:44:33 UTC
This has been happening to me for a few days as well.

It usually works as expected in a new session, at some point it breaks to the described tiny nub.

Changing the scaling (I usually do 125, 130 or 135%) seems to temporarily fix it for me. My windows are usually garbled after the screen has been locked or my computer has suspended, and I suspect that to be the trigger for the system tray popups as well.
Comment 11 Konrad Materka 2024-04-24 08:54:10 UTC
*** Bug 485874 has been marked as a duplicate of this bug. ***
Comment 12 Konrad Materka 2024-04-24 08:55:26 UTC
*** Bug 485780 has been marked as a duplicate of this bug. ***
Comment 13 Konrad Materka 2024-04-24 08:58:23 UTC
*** Bug 485958 has been marked as a duplicate of this bug. ***
Comment 14 Konrad Materka 2024-04-24 08:59:01 UTC
*** Bug 486042 has been marked as a duplicate of this bug. ***
Comment 15 Konrad Materka 2024-04-24 08:59:26 UTC
*** Bug 485983 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2024-04-26 12:14:36 UTC
Apparently caused by https://codereview.qt-project.org/c/qt/qtwayland/+/527831 which was a hotfix for an even worse issue.

Fix in progress with https://invent.kde.org/plasma/libplasma/-/merge_requests/1109.
Comment 17 cbv49v31q 2024-05-02 06:43:22 UTC
*** Bug 486380 has been marked as a duplicate of this bug. ***
Comment 18 Marco Martin 2024-05-02 09:51:00 UTC
Git commit a0949c6afcff4192ffcdf43c2ef305fb4b61f857 by Marco Martin.
Committed on 02/05/2024 at 09:50.
Pushed by mart into branch 'master'.

Workaround setMinimumSize not resizing

on wayland, setting  the  minimum size of a window, doesn't
resize it if its new minimum size is bigger then the current size
Related: bug 480722

M  +15   -5    src/plasmaquick/appletpopup.cpp

https://invent.kde.org/plasma/libplasma/-/commit/a0949c6afcff4192ffcdf43c2ef305fb4b61f857
Comment 19 Konrad Materka 2024-05-02 10:54:36 UTC
*** Bug 485587 has been marked as a duplicate of this bug. ***
Comment 20 Marco Martin 2024-05-02 12:50:17 UTC
Git commit 6ef5f23018f02eb7cdb2523adb224f34b7a8f22d by Marco Martin.
Committed on 02/05/2024 at 12:45.
Pushed by mart into branch 'Plasma/6.0'.

Workaround setMinimumSize not resizing

on wayland, setting  the  minimum size of a window, doesn't
resize it if its new minimum size is bigger then the current size
Related: bug 480722


(cherry picked from commit a0949c6afcff4192ffcdf43c2ef305fb4b61f857)

0404657c Workaround setMinimumSize not resizing
a82e4ca1 enforce bounds everywhere
e625482e Apply 1 suggestion(s) to 1 file(s)

M  +15   -5    src/plasmaquick/appletpopup.cpp

https://invent.kde.org/plasma/libplasma/-/commit/6ef5f23018f02eb7cdb2523adb224f34b7a8f22d
Comment 21 David Edmundson 2024-05-02 13:27:15 UTC
*** Bug 485708 has been marked as a duplicate of this bug. ***
Comment 22 Eric Donkersloot 2024-05-03 06:17:06 UTC
I'm wondering why I can reproduce this on my Fedora 40 laptop, but on my desktop with a fully up-to-date OpenSUSE TW.
Comment 23 Eric Donkersloot 2024-05-03 06:17:54 UTC
* but NOT on my desktop with a fully up-to-date OpenSUSE TW.
Comment 24 Konrad Materka 2024-05-03 16:09:02 UTC
*** Bug 486476 has been marked as a duplicate of this bug. ***
Comment 25 Nate Graham 2024-05-03 19:48:10 UTC
*** Bug 486477 has been marked as a duplicate of this bug. ***
Comment 26 Nate Graham 2024-05-04 04:49:39 UTC
*** Bug 486485 has been marked as a duplicate of this bug. ***
Comment 27 ali.rezayinejad 2024-05-04 11:49:05 UTC
I'm on Nvidia (Unfortunately) and I guess I was able to fix this by adjusting DRM kernel mode settings (nvidia_drm.modeset=1) as instructed on the Arch Wiki: https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting
Can someone else please verify?
Comment 28 RazTheCat 2024-05-05 15:45:45 UTC
I have been able to recreate this on fresh installs of Plasma 6 on both NixOS Unstable and Arch Linux.  The bug doesn't seem to be present in the current Fedora 40.  I have an Intel integrated CPU if that helps.
Comment 29 RazTheCat 2024-05-05 15:46:46 UTC
(In reply to RazTheCat from comment #28)
> I have been able to recreate this on fresh installs of Plasma 6 on both
> NixOS Unstable and Arch Linux.  The bug doesn't seem to be present in the
> current Fedora 40.  I have an Intel integrated CPU if that helps.

Integrated GPU*.
Comment 30 RazTheCat 2024-05-05 15:51:28 UTC
It looks like a fix is in the works.  Thanks for the help on this devs.
Comment 31 Nate Graham 2024-05-05 20:03:29 UTC
*** Bug 486607 has been marked as a duplicate of this bug. ***
Comment 32 Filip 2024-05-08 12:30:36 UTC
*** Bug 486767 has been marked as a duplicate of this bug. ***
Comment 33 Filip 2024-05-09 08:10:39 UTC
*** Bug 486801 has been marked as a duplicate of this bug. ***
Comment 34 Filip 2024-05-14 07:52:43 UTC
*** Bug 486989 has been marked as a duplicate of this bug. ***
Comment 35 Andrea Cimino 2024-05-15 05:38:18 UTC
*** Bug 486981 has been marked as a duplicate of this bug. ***
Comment 36 Andrea Cimino 2024-05-15 05:39:59 UTC
*** Bug 486981 has been marked as a duplicate of this bug. ***
Comment 37 Antonio Rojas 2024-05-16 09:24:49 UTC
*** Bug 487091 has been marked as a duplicate of this bug. ***
Comment 38 Konrad Materka 2024-05-29 06:13:00 UTC
*** Bug 486260 has been marked as a duplicate of this bug. ***
Comment 39 Nate Graham 2024-06-18 16:58:26 UTC
*** Bug 487232 has been marked as a duplicate of this bug. ***
Comment 40 cwo 2024-09-17 15:52:47 UTC
*** Bug 485612 has been marked as a duplicate of this bug. ***