Workaround setMinimumSize not resizing

on wayland, setting  the  minimum size of a window, doesn't
resize it if its new minimum size is bigger then the current size

BUG:485456
BUG:480722